testing Phabricaott integration

--- a/README.adoc
+++ b/README.adoc
@@ -72,3 +72,5 @@ Defi is rife with scams. And it’s unreasonable to expect every investor to hav
 Rug RADAR started as a Javascript status code analysis tool running in your browser. This has already provided immense value to the community by giving more knowledge to more investors. By being able to apply proven static code analysis technology commonly used in enterprise development implemented in your browser Rug RADAR has only scratched the surface of what’s possible. Companies like Truffle Suite, MythX, and OpenZeppelin provide premium code analysis tools for developers. But these are currently tuned, and packaged for developers. While anyone could download and apply the free open source versions, this typically requires development skills.
 
 By apply proven enterprise technology, with a simple pay per scan tokenization model these products can be made available to the community to execute on demand. By taking advantage of cached results, the cost can be kept very low, and amortized across multiple requests for the same result to allow for a fair price for the service. Combined with a fee split model for liquidity providers and the ability to spend pending rewards on requests a reasonable tokenization model can be defined where a deposit of a reasonable amount of liquidity and average usage of requests an early buyer and staker could easy maintain a life time of use provided the trading volume keep up. And with a pay per request model, trading volume, and additions to liquidity can be maintained with regular resales of paid tokens, and promotions to provide liquidity. Combined with the ability to pay tokens to vote on funding further development of the capabilities of Rug RADAR, advancing from the basic static code analysis in your browser to full simulated test runs with thousands of transactions on the server. Tests that can be provided by developers that when users select their tests, the developer that provided the test can receive a portion of the fee.
+
+test text
